# protector

./: Anchor.toml  CLAUDE.md  Cargo.toml  README.md  validators.json
cli/: Cargo.toml
cli/src/: bloom.rs  main.rs  parse_validators.rs
programs/protector/: Cargo.toml
programs/protector/src/: errors.rs  lib.rs
programs/protector/src/instructions/: mod.rs
programs/protector/src/state/: bad_programs.rs  leader_schedule.rs  mod.rs
programs/protector/src/utils/: inspector.rs
tests/: protector.ts
